[package]
name = "revpi_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.95", features = ["parsing"]}
proc-macro2 = "1.0.39"
quote = "1.0.18"
serde_json = "1.0.81"
revpi_rsc = {path = "../revpi_rsc"}
